# character-music-mcp

./: .gitignore  ARTIST_DESCRIPTION_FEATURE.md  CHANGELOG.md  COVERAGE_IMPROVEMENT_ISSUE.md  GITHUB_ISSUES_TEMPLATE.md  GUIDE.md  INTELLIGENT_MATCHING_IMPLEMENTATION.md  MONITORING.md  Makefile  PERFORMANCE_MONITORING_IMPLEMENTATION.md  PULL_REQUEST_COVERAGE.md  README.md  RELEASE_BLOCKERS.md  RELEASE_PROGRESS_TRACKER.md  RELEASE_READINESS_REPORT.md  RELEASE_TASKS.md  TEST_COVERAGE_IMPROVEMENT_SUMMARY.md  __init__.py  bandit_report.json  bandit_report_after_fix.json  code_audit_report.md  coverage.json  dagger.json  debug_imports.py  demo_config_management.py  demo_performance_monitoring.py  dynamic_config_manager.py  enhanced_beat_generator.py  enhanced_cache_manager.py  enhanced_character_analyzer.py  enhanced_emotional_analyzer.py  enhanced_genre_mapper.py  enhanced_understand_topic_emotions.py  error_monitoring_system.py  error_recovery_manager.py  fix_test_imports.py  genre_production_intelligence.py  github_issues_manual.md  graceful_degradation_system.py  integrated_error_handling.py  (+54 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: test_coverage_improvement.md
.github/scripts/: parse_test_failures.py
.github/workflows/: ci.yml  dagger-agent.yml  lint-auto-fix.yml  lint-check-pr.yml  test-and-smoke.yml
config/: wiki_config.json
dagger-agent/: .env.example  README.md  dagger.json  pyproject.toml
dagger-agent/src/character_music_mcp/: __init__.py  cli.py  config.py  deepseek_client.py  failure_analyzer.py  failure_detector.py  logging_config.py  main.py  models.py
dagger-agent/tests/: __init__.py  test_config.py  test_deepseek_client.py  test_failure_analyzer.py  test_failure_detector.py  test_github_context.py  test_main.py  test_models.py  test_pr_creation.py
docs/: STANDARD_CHARACTER_PROFILE_README.md  api_reference.md  deployment_checklist.md  deployment_guide.md  developer_integration_guide.md  final_validation_report.md  lint-automation.md  maintenance_procedures.md  mcp_tools_examples.md  mcp_tools_integration_guide.md  mcp_tools_quick_reference.md  mcp_tools_reference.md  mcp_tools_troubleshooting.md  test_integration_report.md  user_onboarding_guide.md  wiki_configuration_guide.md  wiki_data_system.md  wiki_troubleshooting_guide.md
docs/user_guides/: album_creation_guide.md  getting_started.md  lyric_generation.md  prompt_engineering.md  troubleshooting.md
examples/: music_production_examples.py  usage_examples.py
examples/character_driven_albums/: README.md  lighthouse_keeper_daughter.md  night_shift_nurse.md
examples/concept_albums/: README.md  architecture_of_loneliness.md
examples/genre_specific_examples/: README.md  folk_storyteller.md
examples/prompt_templates/: README.md  character_deep_dive.md  folk_template.md  thematic_album.md
experiments/: debug_imports.py  demo_config_management.py  demo_performance_monitoring.py  smoke_test.py  test_coverage_improvement_plan.py  test_simple_import.py
quality-reports/: api.json  index.html  summary.json
scripts/: README.md  compare_benchmarks.py  create_quality_dashboard.py  generate_dashboard.py  migrate_test_data.py  monitor_performance.py  monitor_quality.py  monitor_wiki_freshness.py  run_benchmarks.py  run_tests.py  validate_all.py  wiki_alerting.sh
src/character_music_mcp/: server.py
tests/: README.md  conftest.py  test_config.py  test_core_classes.py  test_enhanced_features.py  test_mcp_server.py  test_runner.py
tests/fixtures/: README.md  mock_contexts.py  test_data.py
tests/integration/: README.md  legacy_test_complete_workflow.py  legacy_test_mcp_workflow.py  test_album_coherence_and_quality.py  (+26 more)
(+131 files in other folders)
